--- a/eaglecraft 3kho 1.6.2
+++ b/eaglecraft 3kho 1.6.2
@@ -1,10 +1,10 @@
 .new("Hello World!")
 /spawn<mob(hello world)/spawn120/creppers/endreman/zombies/withers/pigmans
 <import vanilla world>
-generate blocks <structers loading generation
+<world_seed?/w<Ht> generate blocks <structers loading generation
 <eagtek assisting page white>
 <commands allow cheatmode /xp /gamemode1234... 
-epk file loaded items despawn <spawn same area/items
+epk file loaded items despawn <spawn same area/items<Archetecture_access_1>
 
 
 
